examples/test/testpolicy16881.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16881
  namespace: namespace469
spec:
  podSelector:
    matchLabels:
      key27: value14
      key30: value36
      key19: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value16
      podSelector:
        matchLabels:
          key39: value40
          key2: value3
          key26: value46
